--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ app.*.map.json
 # Unsafe
 google-services.json
 /lib/firebase_options.dart
+/macos/Runner/GoogleService-Info.plist
+/ios/Runner/GoogleService-Info.plist
