--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   go_router: ^14.6.1
   flutter_dotenv: ^5.2.1
   http: ^1.2.2
+  cloud_firestore: ^5.5.1
 
 dev_dependencies:
   flutter_test:
